--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,7 +46,7 @@
     <string name="rate_app">Rate the app</string>
 
     <!--Inspire Text-->
-    <string name="InspireText">If You feel you have a real-life story that can Inspire or bring smiles to others faces, then share your story to reach everyone.</string>
+    <string name="InspireText">If you have a story that can inspire or bring smiles, then share your story to reach everyone.</string>
     <string name="shareHere">SHARE HERE!</string>
 
     <!-- TODO: Remove or change this placeholder text -->
